# miniaudioengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  buildspec.yml  configure.sh  samconfig.toml  template.yaml  vcpkg.json
examples/midi-device-input/: CMakeLists.txt  vcpkg.json
examples/midi-device-input/src/: CMakeLists.txt  main.cpp
examples/sampler/: CMakeLists.txt  vcpkg.json
examples/sampler/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  audiosession.cpp  main.cpp
src/adapters/: CMakeLists.txt
src/adapters/include/: audioadapter.h  fileadapter.h  midiadapter.h
src/adapters/src/: audioadapter.cpp  fileadapter.cpp  midiadapter.cpp
src/audioengine/: CMakeLists.txt
src/audioengine/include/: audioengine.h  audiointerface.h
src/audioengine/src/: audioengine.cpp  audiointerface.cpp
src/backend/: CMakeLists.txt
src/backend/include/: audioadapter.h
src/backend/src/: audioadapter.cpp
src/cli/: CMakeLists.txt
src/cli/include/: cli.h
src/cli/src/: cli.cpp
src/control/: CMakeLists.txt
src/control/audio/: CMakeLists.txt
src/control/audio/include/: audiocontroller.h  (+2 more)
src/control/devicemanager/: CMakeLists.txt
src/control/midi/: CMakeLists.txt
src/control/trackmanager/: CMakeLists.txt
src/controlplane/: CMakeLists.txt
src/controlplane/audio/: CMakeLists.txt
src/controlplane/coreengine/: CMakeLists.txt
src/controlplane/devicemanager/: CMakeLists.txt
src/controlplane/midi/: CMakeLists.txt
src/controlplane/trackmanager/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: doublebuffer.h  logger.h
src/core/src/: controller.cpp  filehandle.cpp  logger.cpp
src/coreengine/: CMakeLists.txt
src/coreengine/devicemanager/: CMakeLists.txt
src/coreengine/filemanager/: CMakeLists.txt
src/coreengine/include/: coreengine.h
src/coreengine/src/: coreengine.cpp
src/coreengine/trackmanager/: CMakeLists.txt
src/data/audio/: CMakeLists.txt
src/data/midi/: CMakeLists.txt
src/dataplane/: CMakeLists.txt
src/dataplane/audio/: CMakeLists.txt
src/dataplane/include/: audiograph.h  inputnode.h  mixernode.h  outputnode.h  processornode.h
src/dataplane/midi/: CMakeLists.txt
src/dataplane/src/: audiograph.cpp  inputnode.cpp  mixernode.cpp  outputnode.cpp  processornode.cpp
src/devicemanager/: CMakeLists.txt
src/devicemanager/include/: audiodevice.h  device.h  devicemanager.h
src/devicemanager/src/: devicemanager.cpp
src/engine/: CMakeLists.txt
src/engine/include/: audiocallbackhandler.h  audiocontroller.h  audiodataplane.h  midicontroller.h  mididataplane.h
src/engine/src/: audiocallbackhandler.cpp  audiocontroller.cpp  audiodataplane.cpp  midicontroller.cpp  mididataplane.cpp
src/entities/: CMakeLists.txt
src/entities/include/: device.h  file.h
src/entities/src/: device.cpp  file.cpp
src/filemanager/include/: wavfile.h
src/filemanager/src/: filemanager.cpp  wavfile.cpp
src/framework/: CMakeLists.txt
src/framework/include/: adapter.h  atomic_buffer.h  audiodevice.h  audiographnode.h  controller.h  dataplane.h  device.h  devicehandle_factory.h  doublebuffer.h  engine.h  file.h  filehandle_factory.h  graph.h  input.h  io.h  lockfree_ringbuffer.h  logger.h  manager.h  messagequeue.h  mididevice.h  miditypes.h  observer.h  output.h  processor.h  realtime_assert.h  ringbuffer.h  subject.h
src/framework/src/: controller.cpp  device.cpp  file.cpp  logger.cpp
src/midiengine/: CMakeLists.txt
src/midiengine/include/: midicontroller.h  midiengine.h  miditypes.h
src/midiengine/src/: midiengine.cpp
src/processing/: CMakeLists.txt
src/processing/audio/: CMakeLists.txt
src/processing/sampleplayer/: CMakeLists.txt
src/public/: CMakeLists.txt
src/public/devicemanager/: CMakeLists.txt
src/public/deviceservice/: CMakeLists.txt
src/public/filemanager/: CMakeLists.txt
src/public/fileservice/: CMakeLists.txt
src/public/io/: CMakeLists.txt
src/public/trackmanager/: CMakeLists.txt
src/public/trackservice/: CMakeLists.txt
src/services/: CMakeLists.txt
src/services/cli/: CMakeLists.txt
src/services/deviceservice/: CMakeLists.txt
src/services/fileservice/: CMakeLists.txt
src/services/include/: deviceservice.h  fileservice.h  maintrack.h  track.h  trackservice.h
src/services/src/: deviceservice.cpp  fileservice.cpp  maintrack.cpp  track.cpp  trackservice.cpp
src/shared/: CMakeLists.txt
src/shared/src/: filehandle.cpp
src/trackmanager/include/: track.h
src/trackmanager/src/: track.cpp  trackmanager.cpp
tests/integration/: CMakeLists.txt  test_audio_input_file.cpp  test_audio_input_integration.cpp  test_midi_input_device.cpp  test_midi_input_integration.cpp
tests/mocks/: CMakeLists.txt
tests/mocks/include/: audiocontroller_mock.h  controller_mock.h  dataplane_mock.h  device_mock.h
tests/profiling/: CMakeLists.txt  test_lockfree_ringbuffer_profiling.cpp  test_track_wav_file_profiling.cpp
tests/realtime/: CMakeLists.txt  test_double_buffer.cpp  test_lockfree_ringbuffer.cpp
tests/unit/: CMakeLists.txt  test_audiobatchproducer_unit.cpp  test_audioengine_unit.cpp  test_audiostreamcontroller_unit.cpp  test_devicemanager_unit.cpp  test_doublebuffer_unit.cpp  test_filemanager_unit.cpp  test_lockfree_ringbuffer_unit.cpp  test_messagequeue_unit.cpp  test_midiportcontroller_unit.cpp  test_subject_observer_unit.cpp  test_track_unit.cpp  test_trackaudiodataplane_unit.cpp  test_trackmanager_unit.cpp  test_trackmididataplane_unit.cpp
tests/unit/control/: CMakeLists.txt  test_audiostreamcontroller_unit.cpp  test_devicemanager_unit.cpp  test_filemanager_unit.cpp  test_midiportcontroller_unit.cpp  test_track_unit.cpp  test_trackmanager_unit.cpp
tests/unit/core/: CMakeLists.txt  test_dataplane_unit.cpp  test_doublebuffer_unit.cpp
tests/unit/data/: CMakeLists.txt  test_audiodataplane_unit.cpp  test_mididataplane_unit.cpp  test_trackmididataplane_unit.cpp
tests/unit/framework/: CMakeLists.txt  test_controller_unit.cpp  test_dataplane_unit.cpp  test_doublebuffer_unit.cpp  test_lockfree_ringbuffer_unit.cpp  test_messagequeue_unit.cpp
(+190 files in other folders)
